# k8s-operators

./: .gitignore  Justfile  README.md  config.yaml  nginx_internal.yaml  prometheus.yaml  prometheus_service.yaml
actix-webhooks/: Cargo.toml  Containerfile  Justfile
actix-webhooks/config/: certificate.yaml  deployment.yaml  issuer.yaml  kustomization.yaml  mutating_webhook_config.yaml  service.yaml  validating_webhook_config.yaml
actix-webhooks/src/: admission_review.rs  main.rs  modifier.rs  validator.rs
aws-parameters/: Makefile  PROJECT  README.md  go.mod  go.sum
envtest-demo/: Justfile  go.mod  go.sum  my_deployment_reconciler.go  my_deployment_reconciler_test.go  my_deployment_types.go  (+1 more)
kube-rs-o6r/: Cargo.toml  Containerfile  Justfile
kube-rs-o6r/config/: kustomization.yaml
kube-rs-o6r/config/crd/: exposed_app.yaml  kustomization.yaml
kube-rs-o6r/config/example/: exposed_app.yaml
kube-rs-o6r/config/manager/: deployment.yaml
kube-rs-o6r/config/rbac/: cluster_role.yaml  cluster_role_binding.yaml  kustomization.yaml
kube-rs-o6r/src/: crdgen.rs  exposed_app.rs  exposed_app_controller.rs  main.rs
no-library/: Cargo.toml  Containerfile  Dockerfile  Justfile
no-library/config/: cluster_role.yaml  cluster_role_binding.yaml  custom_resource_definition.yaml  deployment.yaml  kustomization.yaml  lease.yaml  namespace.yaml  role.yaml  role_binding.yaml  service_account.yaml
no-library/examples/: exposed_app.yaml
no-library/src/: cache.rs  k8s_client.rs  k8s_types.rs  leader_election.rs  main.rs  offset_date_time_parser.rs  operator.rs  reconciler.rs
(+166 files in other folders)
