[package]
name = "actix-webhooks"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { version = "4.10.2", features = ["openssl"] }
base64 = "0.22.1"
openssl = "0.10.72"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
