[package]
name = "kube-rs-o6r"
version = "0.1.0"
edition = "2024"
default-run = "kube-rs-o6r"

[dependencies]
kube = { version = "0.99.0", features = ["runtime", "derive", "unstable-runtime"] }
k8s-openapi = { version = "0.24.0", features = ["latest"] }
schemars = "0.8.22"
serde = "1.0"
serde_yaml = "0.9"
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
futures = "0.3.31"
axum = "0.8.4"


[[bin]]
name = "crdgen"
path = "src/crdgen.rs"
