[package]
name = "no-library"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
reqwest = "0.12.12"
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros", "fs", "sync"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
serde_json = "1.0.140"
serde = { version = "1.0.218", features = ["derive"] }
async-stream = "0.3.6"
futures = "0.3.31"
time = { version = "0.3.39", features = ["serde", "formatting", "parsing"] }
